# vikunja-mcp

./: .gitattributes  .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
packaging/mcpb/: .gitignore  .mcpbignore  README.md  manifest.json
tests/: test_client.py  test_config.py  test_server.py
vikunja_mcp/: __init__.py  client.py  config.py  server.py
