[project]
name = "vikunja-mcp"
version = "0.1.0"
description = "MCP server for managing tasks in a Vikunja instance over its REST API (stdio; write-only, no delete)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "httpx>=0.27",
    "truststore>=0.9",
    "markdown>=3.5",
]

[project.scripts]
vikunja-mcp = "vikunja_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vikunja_mcp"]

[dependency-groups]
dev = ["pytest>=8"]
